# TFsensorSEED

./: .env.example  .gitignore  DEV_STATUS.md  HANDOFF.md  INFRA.md  JOBS_REGISTRY.csv  LAB_MANUAL.md  PIPELINE.md  PROGRESS.md  README.md  drive_apo.sh  drive_ddg.sh  drive_dring.sh  drive_dring_rescore.sh  drive_dring_validate.sh  drive_mutants.sh  drive_mutants_analysis.sh  drive_prog_cort.sh  drive_stage1.sh  drive_stage3.sh  pyproject.toml  start_all_bg.sh
data/: AcrR_dimer.fasta  mutants.json  pocket_residues.json  resmap.json  scoring_AcrR.yaml  steroid_panel.csv
data/ligands/: cortisol.sdf  estradiol.sdf  progesterone.sdf  testosterone.sdf
deliverables/: AcrR_prog_cort_sensor_designs.csv  AcrR_prog_cort_sensor_designs.md  AcrR_testosterone_sensor_designs.csv  AcrR_testosterone_sensor_designs.md
docs/: COMPUTATIONAL_BOUNDARY.md  bo_dbtl_plan.md
docs/agent_memory/: MEMORY.md  tfsensor-ddg-calibration.md  (+10 more)
minicrew/: HANDOVER.md  README.md  SETUP.md  docker-compose.yml  requirements.txt
scripts/: minicrew  minicrew-app  minicrew-desktop  minicrew-start  minicrew-stop
tfsensor/: __init__.py  allostery.py  benchmark_compare.py  biosensor_score.py  boltz_holo_inputs.py  boltz_selectivity.py  config.py  ddg_mutation.py  ddg_panel.py  ddg_report.py  design_gate.py  design_score.py  fep_rbfe.py  ligand_cheminformatics.py  ligandmpnn_gen.py  pdb_interaction_mining.py  physics_panel.py  physics_score.py  prep_receptor.py  protenix_runner.py  pymol_analyze.py  pymol_cofold.py  pymol_interactions.py  pymol_pocket.py  replicate_summary.py  rescore_oriented.py  steroid_ligands.py  thread_mutant.py  trigger_panel.py  two_state_panel.py
tfsensor_crew/: PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  pyproject.toml
tfsensor_crew/knowledge/: .gitkeep
tfsensor_crew/src/tfsensor_crew/: __init__.py  crew.py  main.py  parser.py
tfsensor_crew/src/tfsensor_crew/config/: agents.yaml  tasks.yaml
tfsensor_crew/tests/: conftest.py  test_challenger.py  test_f1_lifecycle.py  test_f2_progress_parser.py  test_f3_csv_parser.py  test_f4_sync_analysis.py  test_f5_report_gen.py  test_pairwise.py  test_real_world.py
(+193 files in other folders)
